@@ -1,5 +1,13 @@
 2005-10-21  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil/StructureWriter.cs
+	  Mono.Cecil/ReflectionReader.cs
+	  Mono.Cecil/MethodDefinition.cs
+	  Mono.Cecil/ReflectionWriter.cs:
+		Fix regressions.
+	* Mono.Cecil.Cil/MethodBody.cs:
+		Fix method cloning.
+
 	* CodeGen/templates/MetadataTableReader.cs
 	  Mono.Cecil.Metadata/MetadataTableReader.cs
 	  Mono.Cecil.Metadata/MetadataReader.cs:
